--- a/src/app/features/admin/manage-order/manage-order.component.html
+++ b/src/app/features/admin/manage-order/manage-order.component.html
@@ -29,35 +29,18 @@
             </div>
             <div class="mb-4 d-flex align-items-center">
                 <label for="status">Tình Trạng</label>
-                <select name="order-status" id="status" class="ms-3 me-3 w-auto form-select">
+                <select name="order-status" id="status" class="ms-3 me-3 w-auto form-select" [(ngModel)]="status">
                     <option value="">-- Tất cả --</option>
+                    <option>Chờ xác nhận</option>
+                    <option>Đã xác nhận</option>
+                    <option>Đã thanh toán</option>
+                    <option>Đang giao</option>
+                    <option>Đã giao</option>
+                    <option>Đã hủy</option>
                 </select>
                 <button type="submit" name="submit" class="btn btn-dark" (click)="filterOrders()">Lọc</button>
             </div>
-            <!-- <div class="mb-3 mt-4 d-flex align-items-center">
-                <label for="date-from">Ngày Lọc</label>
-                <input id="date-from" type="date" class="ms-3 me-3 w-auto form-control" [(ngModel)]="dateFrom">
-                <i class="fa-solid fa-arrow-right"></i>
-                <input id="date-to" type="date" class="ms-3 me-3 w-auto form-control" [(ngModel)]="dateTo">
-              </div>
-              <div class="mb-3 d-flex align-items-center">
-                <label for="province">Tỉnh (Thành)</label>
-                <select id="order-province" name="province" class="ms-3 me-3 w-auto form-select" [(ngModel)]="selectedProvince" (change)="onProvinceChange()">
-                  <option value="0">-- Chọn --</option>
-                  <option *ngFor="let province of provinces" [value]="province.id">{{ province.name }}</option>
-                </select>
-                <label for="district">Quận (Huyện)</label>
-                <select id="order-district" name="district" class="ms-3 me-3 w-auto form-select" [(ngModel)]="selectedDistrict" (change)="onDistrictChange()">
-                  <option value="0">-- Chọn --</option>
-                  <option *ngFor="let district of districts" [value]="district.id">{{ district.name }}</option>
-                </select>
-                <label for="ward">Xã (Phường, Thị Trấn)</label>
-                <select id="order-ward" name="ward" class="ms-3 me-3 w-auto form-select" [(ngModel)]="selectedWard">
-                  <option value="0">-- Chọn --</option>
-                  <option *ngFor="let ward of wards" [value]="ward.id">{{ ward.name }}</option>
-                </select>
-              </div>
-              <button type="button" class="btn btn-dark" (click)="filterOrders()">Lọc</button> -->
+        
               
             <div class="card mb-4">
                 <p-toast></p-toast>
@@ -95,7 +78,14 @@
                                 <td>{{ order.datetime | date:'yyyy-MM-dd HH:mm:ss' }}</td>
                                 <td>{{ order.discount_amount | currency: 'VND' }}</td>
                                 <td>{{ order.total | currency: 'VND' }}</td>
-                                <td>{{ order.orderStatus }}</td>
+                                <td *ngIf="order.orderStatus === 'Đã hủy'">{{ order.orderStatus }}</td>
+                                <td *ngIf="order.orderStatus !== 'Đã hủy'"><p-dropdown 
+                                    [options]="statuses" 
+                                    [(ngModel)]="order.orderStatus" 
+                                    optionLabel="value" 
+                                    optionValue="value"
+                                    (onChange)="editOrder(order)"
+                                    placeholder="Chọn trạng thái" /></td>
                                 <td>
                                     <button pButton type="button" class="btn btn-dark" (click)="showDialog(order)">Xem</button>
                                 </td>
