--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -59,10 +59,10 @@
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-field"></i></div>
                             Phiếu nhập
                         </a>
-                        <a class="nav-link" routerLink="/admin/user">
+                        <!-- <a class="nav-link" routerLink="/admin/user">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
                             Người dùng
-                        </a>
+                        </a> -->
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
