--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -3,7 +3,7 @@
 <div class="container-fuild">
     <div class="row">
         <div class="col-12">
-            <a class="btn-close float-end m-2"></a>
+            <a class="btn-close float-end m-2" [routerLink]="['/']"></a>
         </div>
         <div class="col-12 mb-5">
             <div class="sign-in-modal row m-auto">
