--- a/src/app/features/personal_information/my-orders/my-orders.component.html
+++ b/src/app/features/personal_information/my-orders/my-orders.component.html
@@ -69,7 +69,7 @@
                         <div class="col-4 col-sm-4 col-md-3 col-lg-2">{{order.datetime|date:"dd-MM-yyyy"}}</div>
                         <div class="d-none d-lg-block col-lg-2">{{ order.discount_amount | currency: 'VND' }}</div>
                         <div class="d-none d-lg-block col-lg-2">{{ order.shipping_Charge | currency: 'VND' }}</div>
-                        <div class="col-4 col-sm-4 col-md-3 col-lg-2">{{(order?.total || 0) - (order?.discount_amount || 0) +  (order?.shipping_Charge || 0) | currency: "VND"}}</div>
+                        <div class="col-4 col-sm-4 col-md-3 col-lg-2">{{order?.total || 0| currency: "VND"}}</div>
                         <div class="d-none d-sm-block col-md-3 col-lg-2">{{order.formOfPayment}}</div>
                         <div class="col-4 col-sm-4 col-md-3 col-lg-2">{{order.orderStatus}}</div>
                     </div>
@@ -135,7 +135,7 @@
                     <div class="flex-fill card p-2 ms-2">
                         <div class="row">
                             <p class="col-6">Tạm tính</p>
-                            <p class="col-6 text-end">{{selectedOrder.total | currency:"VND"}} đ</p>
+                            <p class="col-6 text-end">{{(selectedOrder.total || 0) + (selectedOrder.discount_amount || 0) -  (selectedOrder.shipping_Charge || 0) | currency:"VND"}} đ</p>
                         </div>
                         <div class="row">
                             <p class="col-6">Phí vận chuyển</p>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="row">
                             <p class="col-6 mt-3">Tổng cộng</p>
-                            <p class="col-6 mt-3 text-end">{{(selectedOrder.total || 0) - (selectedOrder.discount_amount || 0) +  (selectedOrder.shipping_Charge || 0) | currency: "VND"}}</p>
+                            <p class="col-6 mt-3 text-end">{{selectedOrder.total || 0 | currency: "VND"}}</p>
                         </div>
                     </div>
                 </div>
