--- a/src/app/shared/components/admin-header/admin-header.component.html
+++ b/src/app/shared/components/admin-header/admin-header.component.html
@@ -15,10 +15,7 @@
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#!">Thông tin tài khoản</a></li>
-                <li><a class="dropdown-item" href="#!">Nhật ký hành động</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#!">Đăng xuất</a></li>
+                <li><a class="dropdown-item" (click)="logout()">Đăng xuất</a></li>
             </ul>
         </li>
     </ul>
