--- a/src/app/features/admin/manage-goods-receipt/manage-goods-receipt.component.html
+++ b/src/app/features/admin/manage-goods-receipt/manage-goods-receipt.component.html
@@ -38,9 +38,6 @@
                                 </td>
                                 <td>
                                     <p-cellEditor>
-                                        <ng-template pTemplate="input">
-                                            <input pInputText type="text" [(ngModel)]="goodsReceipt.datetime" />
-                                        </ng-template>
                                         <ng-template pTemplate="output">
                                             {{ goodsReceipt.datetime | date:'yyyy-MM-dd' }}
                                         </ng-template>
@@ -48,9 +45,6 @@
                                 </td>
                                 <td>
                                     <p-cellEditor>
-                                        <ng-template pTemplate="input">
-                                            <input pInputText type="text" [(ngModel)]="goodsReceipt.total" />
-                                        </ng-template>
                                         <ng-template pTemplate="output">
                                             {{ goodsReceipt.total | currency:'VND' }}
                                         </ng-template>
@@ -88,9 +82,9 @@
             <p>Ngày đặt hàng: 
                 <input 
                 type="date" 
-                pInputText 
-                [ngModel]="selectedGoodsReceipt.datetime| date: 'yyyy-MM-dd'"
-                name="">
+                class="form-control"
+                [ngModel]="selectedGoodsReceipt.datetime | date:'yyyy-MM-dd'" 
+                (ngModelChange)="selectedGoodsReceipt.datetime = $event">
             </p>
             <p>Nhà cung cấp:
                 <p-dropdown [(ngModel)]="selectedGoodsReceipt.supplier_ID" [options]="suppliers"
@@ -145,7 +139,7 @@
         <tbody>
             <tr *ngFor="let detail of selectedGoodsReceipt?.detailGoodsReceipts">
                 <td>{{ detail.product_ID }}</td>
-                <td class=" text-truncate" style="max-width: 270px;">{{ detail.productVariation?.product?.name }}</td>
+                <td class=" text-truncate" style="max-width: 270px;">{{ detail.productVariation?.product?.name }} ({{detail.productVariation?.color?.name}} - {{detail.productVariation?.size?.name}})</td>
                 <td>{{ detail.unit_Price | currency:'VND'  }}</td>
                 <td *ngIf="DialogTitle === 'Thêm'">
                     <p-inputNumber  
