fix bug product api

--- a/src/app/features/shop/special-item-shop/special-item-shop.component.html
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.html
@@ -53,10 +53,10 @@
     </div>
   </div>
   <img
-    src="../../../../assets/images/bestseller.png"
+    src="../../../../assets/images/pngegg.png"
     alt=""
     width="150"
-    style="position: absolute; right: 0; transform: rotate(45deg)"
+    style="position: absolute; right: 20px; transform: rotate(45deg)"
   /> 
 
   <!-- TEST HIỂN THỊ NGAY SAU KHI NHẤN THÊM VÀO GIỎ HÀNG -->
